# tclsimrawreader

./: .gitignore  LICENSE  Makefile.in  README.md  configure  configure.ac  pkgIndex.tcl.in  tclsimrawreader.tcl
autom4te.cache/: output.0  requests  traces.0
docs/: .buildinfo  doc_gen.tcl  genindex.html  index.html  notesAndInternals.ruff  objects.inv  search.html  searchindex.js  startPage.ruff  tclsimrawreader-Notes-and-internals.html  tclsimrawreader-notes-and-internals.n  tclsimrawreader-tclsimrawreader.html  tclsimrawreader-tclsimrawreader.n  tclsimrawreader.html  tclsimrawreader.n  tclsimrawreader.ruff
generic/: tclsimrawreader.c  tclsimrawreader.h
test/: all.tcl  arbitaryTest.tcl  ltspice.test  ngspice.test  tclsimrawreader.test  xyce.test
test/raw_files/ltspice/: ac.raw  ac_ascii.raw  ac_multiplot.raw  ac_multiplot_ascii.raw  dc.raw  dc_ascii.raw  dc_high_precision.raw  dc_multiplot.raw  dc_multiplot_ascii.raw  dc_multiplot_high_precision.raw  tran.raw  tran_ascii.raw  tran_high_precision.raw  tran_multiplot.raw  tran_multiplot_ascii.raw  tran_multiplot_high_precision.raw
test/raw_files/ngspice/: ac.raw  ac_ascii.raw  ac_multiplot.raw  ac_multiplot_ascii.raw  dc.raw  dc_ascii.raw  noise.raw  noise_ascii.raw  op.raw  op_ascii.raw  tran.raw  tran_ascii.raw
test/raw_files/xyce/: ac.raw  ac_ascii.raw  dc.raw  dc_ascii.raw  dc_multiplot.raw  dc_multiplot_ascii.raw  noise.raw  tran.raw  tran_ascii.raw
